--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://site-assets.fontawesome.com/releases/v6.1.1/css/all.css"
     />
 
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 
     <!--font awesome cdn-->
     <title>CCColors</title>
@@ -91,7 +91,7 @@
     </div>
 
     <div class="darkModetransition"></div>
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
