added more colors

--- a/index.html
+++ b/index.html
@@ -40,8 +40,18 @@
         <a class="left-a"></a>
       </nav>
       <div class="left-icons">
-        <ion-icon name="logo-linkedin"></ion-icon>
-        <ion-icon name="logo-behance"></ion-icon>
+        <a
+          href="https://www.linkedin.com/in/mohamed-anas-fikhi-36129822a/"
+          target="_blank"
+        >
+          <ion-icon name="logo-linkedin"></ion-icon
+        ></a>
+        <a href="https://dribbble.com/gwhyyyy" target="_blank"
+          ><ion-icon name="logo-dribbble"></ion-icon
+        ></a>
+        <a href="https://github.com/anasfik" target="_blank">
+          <ion-icon name="logo-github"></ion-icon
+        ></a>
       </div>
     </div>
 
