--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="left-side" id="left-side">
       <div class="toFlex">
-        <h2 class="left-side-title">CCCCOLORS</h2>
+        <h2 class="left-side-title">CCCOLORS</h2>
         <span class="darkModeIcon" id="darkModeIcon">
           <ion-icon name="moon-outline" id="lightmodebtn"></ion-icon>
           <ion-icon name="sunny-outline" id="nightmodebtn"></ion-icon>
